# ChangeLog for x11-libs/fox
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/fox/ChangeLog,v 1.172 2013/09/13 20:33:13 mabi Exp $

*fox-1.7.41 (13 Sep 2013)

  13 Sep 2013; Matti Bickel <mabi@gentoo.org> +fox-1.7.41.ebuild,
  -fox-1.7.37.ebuild, -fox-1.7.39.ebuild:
  version bump

*fox-1.7.40 (26 Aug 2013)

  26 Aug 2013; Patrick Lauer <patrick@gentoo.org> +fox-1.7.40.ebuild:
  Bump

  03 Aug 2013; Agostino Sarubbo <ago@gentoo.org> fox-1.6.45.ebuild:
  Stable for sparc, wrt bug #475654

  07 Jul 2013; Agostino Sarubbo <ago@gentoo.org> fox-1.6.45.ebuild:
  Stable for ia64, wrt bug #475654

  06 Jul 2013; Agostino Sarubbo <ago@gentoo.org> fox-1.6.45.ebuild:
  Stable for alpha, wrt bug #475654

  05 Jul 2013; Jeroen Roovers <jer@gentoo.org> fox-1.6.45.ebuild:
  Stable for HPPA (bug #475654).

  04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> fox-1.6.45.ebuild:
  Stable for ppc64, wrt bug #475654

  04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> fox-1.6.45.ebuild:
  Stable for ppc, wrt bug #475654

  04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> fox-1.6.45.ebuild:
  Stable for x86, wrt bug #475654

  04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> fox-1.6.45.ebuild:
  Stable for amd64, wrt bug #475654

*fox-1.6.49 (03 Jul 2013)
*fox-1.7.39 (03 Jul 2013)

  03 Jul 2013; Matti Bickel <mabi@gentoo.org> +fox-1.6.49.ebuild,
  +fox-1.7.39.ebuild, -fox-1.7.32.ebuild, -fox-1.7.33.ebuild:
  version bump, remove outdated dev builds

  23 Dec 2012; Matti Bickel <mabi@gentoo.org> fox-1.6.40.ebuild,
  fox-1.6.45.ebuild:
  add explicit link to libfontconfig (covered by DEPEND libXft), already fixed
  upstream in 1.7, fixes bug #368887

*fox-1.7.37 (22 Dec 2012)

  22 Dec 2012; Matti Bickel <mabi@gentoo.org> +fox-1.7.37.ebuild,
  -fox-1.6.43.ebuild, fox-1.6.40.ebuild, fox-1.6.45.ebuild, fox-1.7.32.ebuild,
  fox-1.7.33.ebuild:
  version bump & remove old. also add default USE for the common stuff. also